Fix gradle stuff

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
 include 'keanu-project',
         'keanu-docs:code',
         'keanu-examples:coalMiningDisasters',
-        'keanu-examples:starter'
-include 'appleton'
+        'keanu-examples:starter',
+        'keanu-examples:appleton'
 
