--- a/keanu-examples/appleton/build.gradle
+++ b/keanu-examples/appleton/build.gradle
@@ -21,6 +21,7 @@ repositories {
 }
 
 dependencies {
+    compile project(":keanu-project")
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
