--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,6 @@
 include 'keanu-project',
         'keanu-docs:code',
         'keanu-examples:coalMiningDisasters',
-        'keanu-examples:starter'
+        'keanu-examples:starter',
+        'keanu-examples:lorenz4DVar'
+
